# ampere

./: .env.example  .gitignore  .sqlfluff  .sqlfluffignore  Dockerfile-api  Dockerfile-backend  Dockerfile-frontend  Justfile  README.md  dbt_project.yml  docker-compose.yml  gunicorn_config.py  profiles.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: lint.yml  release.yml
ampere/: app.py  app_shared.py  cache_plots.py  common.py  dashboard.py  get_pypi_bigquery_historical_data.py  get_pypi_downloads.py  get_repo_metrics.py  maintenance.py  mirror.py  models.py  styling.py  viz.py
ampere/api/: main.py  models.py
ampere/api/routes/: downloads.py  feed.py  repos.py
ampere/assets/: navbar.css  style.css  tables.css
ampere/assets/css/: style.css
ampere/assets/js/: plotly-basic-3.0.0-rc.2.min.js  tooltip.js
ampere/cli/: app.py  common.py  models.py  state.py
ampere/cli/commands/: downloads.py  feed.py  repos.py  scaffold.py
ampere/dagster/: assets.py  definitions.py  jobs.py  project.py  schedules.py  sensors.py
ampere/pages/: about.py  downloads.py  feed.py  issues.py  network_followers.py  network_stargazers.py  side_bar.py  status.py  summary.py
data/: create_views.sql  init.sql
data-tests/: assert_int_downloads_summary_daily_not_stale.sql  assert_int_downloads_summary_monthly_not_stale.sql  assert_int_downloads_summary_python_version_parsed_correctly.sql  assert_int_downloads_summary_weekly_contains_historic_data.sql  assert_int_downloads_summary_weekly_not_exceed_current_date.sql  assert_int_downloads_summary_weekly_not_stale.sql  assert_int_feed_events_mart_feed_events_match.sql  assert_mart_downloads_summary_group_names_have_records.sql  assert_mart_downloads_summary_overall_count_not_unexpected.sql
data/dagster/: dagster.yaml
models/: sources.yml
models/helpers/: helper_date_spine.sql
models/marts/: _mart_models.yml  mart_1.sql  mart_downloads_summary.sql  mart_feed_events.sql  mart_feed_events_agg.sql  mart_issues.sql  mart_issues_summary.sql  mart_repo_summary.sql  mart_stargazers_pivoted.sql  mart_status_details.sql  mart_status_summary.sql
models/staging/: _staging_models.yml  stg_1.sql  stg_commits.sql  stg_downloads.sql  stg_downloads_inc.sql  stg_followers.sql  stg_forks.sql  stg_issues.sql  stg_pull_requests.sql  stg_pypi_downloads.sql  stg_releases.sql  stg_repos.sql  stg_stargazers.sql  stg_users.sql
models/tests/: _test_models.yml  test_downloads_summary_not_stale.sql  test_int_feed_events_mart_feed_events_match.sql
models/transformations/: _int_models.yml  int_downloads_melted.sql  int_downloads_melted_daily.sql  int_downloads_melted_monthly.sql  int_downloads_melted_weekly.sql  int_downloads_summary.sql  int_feed_events.sql  int_feed_events_filled_agg.sql  int_internal_followers.sql  int_network_follower_details.sql  int_network_stargazers.sql  int_network_stargazers_pivoted.sql  int_repo_metrics.sql  int_repo_metrics_changes.sql  int_repo_metrics_filled.sql  int_repo_metrics_filled_partial.sql  int_status_details.sql  int_status_summary.sql  int_status_summary_pivoted.sql  transform_1.sql
scripts/: backfill_pypi_downloads.py  create_duckdb_tables.sql  create_duckdb_views.sql  manage_deltalake.py  update_timestamps.py
