[project]
name = "ampere"
version = "0.1.0"
description = ""
authors = [{ name = "Jeff Brennan", email = "jeffbrennan10@gmail.com" }]
requires-python = ">=3.11, <3.13"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.0.1,<2",
    "sqlmodel>=0.0.22,<0.0.23",
    "requests>=2.32.3,<3",
    "ruff-lsp>=0.0.56,<0.0.57",
    "pyright>=1.1.380,<2",
    "polars>=1.7.1,<2",
    "deltalake>=0.22.3,<0.23",
    "pandas>=2.2.2,<3",
    "dagster>=1.8.7,<2",
    "dagster-webserver>=1.8.7,<2",
    "matplotlib>=3.9.2,<4",
    "plotly>=5.24.1,<6",
    "kaleido==0.2.1",
    "jupyter>=1.1.1,<2",
    "scipy>=1.14.1,<2",
    "dash>=2.18.1,<3",
    "dash-bootstrap-components>=1.6.0,<2",
    "dash-breakpoints>=0.1.0,<0.2",
    "colorlover>=0.3.0,<0.4",
    "google-cloud-bigquery>=3.26.0,<4",
    "db-dtypes>=1.3.0,<2",
    "sqlfluff>=3.2.5,<4",
    "dagster-dbt>=0.25.3,<0.26",
    "dbt-duckdb>=1.9.0,<2",
    "typer>=0.15.1,<0.16",
    "pypalettes>=0.1.4,<0.2",
    "gunicorn>=23.0.0,<24",
    "orjson>=3.10.13,<4",
    "flask-caching>=2.3.0,<3",
    "flask-compress~=1.17",
    "shandy-sqlfmt[jinjafmt]>=0.24.0,<0.25",
    "dash-daq>=0.5.0,<0.6",
    "fastapi[standard]>=0.115.6,<0.116",
    "slowapi>=0.1.9,<0.2",
]

[project.scripts]
ampere = "ampere.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["I"]

[tool.dagster]
code_location_name = "ampere/dagster"
module_name = "ampere.dagster.definitions"

[tool.sqlfmt]
exclude = ["target/**/*", "dbt_packages/**/*"]
line_length = 90
