[project]
name = "ampere-meter"
version = "0.1.6"
description = "Tooling to track and visualize engagement with the mrpowers-io organization"
authors = [{ name = "Jeff Brennan", email = "jeffbrennan10@gmail.com" }]
requires-python = ">=3.11, <3.13"
readme = "README.md"

# CLI dependencies - good for most users
dependencies = [
    "typer>=0.15.1,<0.16",
    "sqlmodel>=0.0.22,<0.0.23",
    "requests>=2.32.3,<3",
]

[dependency-groups]
lint = ["ruff==0.7.4", "sqlfluff==3.2.5"]

[project.optional-dependencies]
common = [
    "pandas>=2.2.2,<3",
    "dbt-duckdb>=1.9.0,<2",
    "duckdb>=1.1.3",
    "polars>=1.7.1,<2",
    "deltalake>=0.22.3,<0.23",
    "python-dotenv>=1.0.1,<2",
]

dev = [
    "ruff-lsp>=0.0.56,<0.0.57",
    "pyright>=1.1.380,<2",
    "sqlfluff>=3.2.5,<4",
    "shandy-sqlfmt[jinjafmt]>=0.24.0,<0.25",
]

# visualization - used in frontend and also backend plot caching
viz = [
    "plotly>=5.24.1,<6",
    "matplotlib>=3.9.2,<4",
    "dash>=2.18.1,<3",
    "dash-bootstrap-components>=1.6.0,<2",
    "dash-breakpoints>=0.1.0,<0.2",
    "flask-caching>=2.3.0,<3",
    "flask-compress~=1.17",
    "gunicorn>=23.0.0,<24",
    "kaleido==0.2.1",
    "pypalettes>=0.1.4,<0.2",
    "scipy>=1.15.1",
]

backend = [
    "dagster>=1.8.7,<2",
    "dagster-webserver>=1.8.7,<2",
    "dagster-dbt>=0.25.3,<0.26",
    "google-cloud-bigquery>=3.26.0,<4",
    "dagster>=1.8.7,<2",
    "db-dtypes>=1.3.0,<2",
]

api = [
    "fastapi[standard]>=0.115.6,<0.116",
    "slowapi>=0.1.9,<0.2",
    "uvicorn>=0.32.1",
]

# cli invocation via `uv run ampere`
[project.scripts]
ampere = "ampere.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ampere"]

# dev tooling
[tool.ruff]
line-length = 90


[tool.sqlfmt]
exclude = ["target/**/*", "dbt_packages/**/*"]
line_length = 90

# backend 
[tool.dagster]
code_location_name = "ampere/dagster"
module_name = "ampere.dagster.definitions"
